--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="scroll-indicator" id="scrollIndicator">
-        ⬇️ Scroll To see it all*-*
+        When it's done Tab and scroll up*-*
     </div>
 
     <pre id="menuNormal" class="hidden" aria-hidden="true">
